# Hospital-Management-Project

./: .editorconfig  .gitignore  CMakeLists.txt  CMakeSettings.json  README.md  config.txt  hospital_management_system.cpp  hospital_management_system.sln  hospital_management_system.vcxproj  hospital_management_system.vcxproj.filters  packages.config  patients.txt
assets/Coding_Convention/: coding_convention.md
assets/Reference/: Class_Diagram.md  Class_Diagram_rework.md  Code_Convention_project.md  HỌP 0105.docx  HỌP OOP 0504.docx  Organiaztion_class_diagram.md  Project_Proposal.md  Repo_interface.md  System_Design.md  TASK_1105.md  TASK_1705.md  TASK_1705_UPDATE.md  TASK_1805.md  TASK_1805_UPDATE.md  TASK_1904.md  TASK_2804.md  TESTING_1305.md  TESTING_2005.md  code_ref.md  doctors.txt  employees.txt  medicines.txt  nurses.txt  patients.txt  project_proposal_update.md  receptionists.txt
database/: departments.txt  medicalRecords.txt  rooms.txt  tests.txt
docs/: Doxyfile
src/: App.cpp  App.h  Config.cpp  Config.h  ServiceLocator.cpp  ServiceLocator.h  config.txt  main.cpp
src/controllers/: BillService.cpp  BillService.h  DepartmentManager.cpp  DepartmentManager.h  EmployeeManager.cpp  EmployeeManager.h  ExaminationService.cpp  ExaminationService.h  MedicineManager.cpp  MedicineManager.h  PatientManager.cpp  PatientManager.h  RegistrationService.cpp  RegistrationService.h  ServiceManager.cpp  ServiceManager.h  TestProcessingService.cpp  TestProcessingService.h
src/interfaces/: IDepartmentRepository.h  IEmployeeRepository.h  IManager.h  IMedicalRecordRepository.h  IMedicineRepository.h  IParser.h  IParserFactory.h  IPatientRepository.h  IPaymentMethod.h  IPerson.h  IQuery.h  IRepository.h  IRoomExaminationRepository.h  ITestServiceRepository.h  IVisitor.h  IWritingVisitor.h
src/model/: Medicine.h
src/models/: Appointment.h  Assignment.cpp  Assignment.h  Bill.cpp  Bill.h  BillableComponent.cpp  BillableComponent.h  BillableComponentTableModel.cpp  BillableComponentTableModel.h  ClinicalTest.cpp  ClinicalTest.h  ClinicalTestParser.h  ClinicalTestTableModel.cpp  ClinicalTestTableModel.h  CompletedState.cpp  CompletedState.h  Department.cpp  Department.h  DepartmentInfo.cpp  DepartmentInfo.h  DepartmentManager.cpp  DepartmentManager.h  DepartmentParser.h  DepartmentQuery.cpp  DepartmentQuery.h  DepartmentStaffManager.cpp  DepartmentStaffManager.h  DepartmentTableModel.cpp  DepartmentTableModel.h  Doctor.cpp  Doctor.h  DoctorParser.h  Employee.cpp  Employee.h  EmployeeManager.cpp  EmployeeManager.h  EmployeeQuery.cpp  EmployeeQuery.h  EmployeeTableModel.cpp  EmployeeTableModel.h  (+126 more)
src/utils/: Date.cpp  Date.h  QueryBuilder.h  QueryTypes.h  QueryUtils.h  Time.cpp  Time.h  utils.cpp  utils.h  utils_template.h
src/views/: DepartmentFilteringView.cpp  DepartmentFilteringView.h  DepartmentFilteringView.ui  DepartmentRecordView.cpp  DepartmentRecordView.h  DepartmentRecordView.ui  EmployeeFilteringView.cpp  EmployeeFilteringView.h  EmployeeFilteringView.ui  EmployeeRecordView.cpp  EmployeeRecordView.h  EmployeeRecordView.ui  HomeView.cpp  HomeView.h  HomeView.ui  LoginView.cpp  LoginView.h  LoginView.ui  ManagementView.cpp  ManagementView.h  ManagementView.ui  MedicineManagementView.cpp  MedicineManagementView.h  MedicineManagementView.ui  MedicinePrecribingView.cpp  MedicinePrecribingView.h  MedicinePrecribingView.ui  MedicinePrescribingView.cpp  MedicinePrescribingView.h  MedicinePrescribingView.ui  ParaclinicalView.cpp  ParaclinicalView.h  ParaclinicalView.ui  PatientFilteringView.cpp  PatientFilteringView.h  PatientFilteringView.ui  PatientRecordView.cpp  PatientRecordView.h  PatientRecordView.ui  ReceiptView.cpp  (+40 more)
